--- a/index.html
+++ b/index.html
@@ -258,18 +258,10 @@
                             <li>✓ Calidad 4K</li>
                         </ul>
                         <div class="pricing-options">
-                            <div class="price-option" data-period="1">
-                                <span class="period">1 Mes</span>
-                                <span class="price">$9.000 COP</span>
-                            </div>
-                            <div class="price-option" data-period="2">
-                                <span class="period">2 Meses</span>
-                                <span class="price">$15.000 COP</span>
-                            </div>
                             <div class="price-option best-value" data-period="12">
-                                <span class="best-tag">Mejor Precio</span>
+                                <span class="best-tag">Oferta</span>
                                 <span class="period">1 Año</span>
-                                <span class="price">$80.000 COP</span>
+                                <span class="price">$43.200 COP</span>
                             </div>
                         </div>
                         <button class="btn btn-primary btn-block" onclick="openModal('HBO Max')">
@@ -296,21 +288,189 @@
                             <li>✓ Sin anuncios</li>
                         </ul>
                         <div class="pricing-options">
-                            <div class="price-option" data-period="1">
-                                <span class="period">1 Mes</span>
-                                <span class="price">$9.000 COP</span>
-                            </div>
-                            <div class="price-option" data-period="2">
-                                <span class="period">2 Meses</span>
-                                <span class="price">$15.000 COP</span>
-                            </div>
-                            <div class="price-option best-value" data-period="12">
-                                <span class="best-tag">Mejor Precio</span>
-                                <span class="period">1 Año</span>
-                                <span class="price">$80.000 COP</span>
+                            <div class="price-option best-value" data-period="3">
+                                <span class="best-tag">Oferta</span>
+                                <span class="period">3 Meses</span>
+                                <span class="price">$27.000 COP</span>
                             </div>
                         </div>
                         <button class="btn btn-primary btn-block" onclick="openModal('Prime Video')">
+                            Comprar Ahora
+                        </button>
+                    </div>
+                </div>
+
+                <!-- Paramount+ -->
+                <div class="service-card" data-service="paramount">
+                    <div class="card-glow"></div>
+                    <div class="card-content">
+                        <div class="service-icon">
+                            <img src="images/paramount.png" alt="Paramount+" class="service-img">
+                        </div>
+                        <h3 class="service-name">Paramount+</h3>
+                        <p class="service-desc">Películas taquilleras, series originales y tus programas favoritos.</p>
+                        <div class="pricing-options">
+                            <div class="price-option best-value" data-period="12">
+                                <span class="best-tag">Oferta</span>
+                                <span class="period">1 Año</span>
+                                <span class="price">$43.200 COP</span>
+                            </div>
+                        </div>
+                        <button class="btn btn-primary btn-block" onclick="openModal('Paramount+')">
+                            Comprar Ahora
+                        </button>
+                    </div>
+                </div>
+
+                <!-- Viki -->
+                <div class="service-card" data-service="viki">
+                    <div class="card-glow"></div>
+                    <div class="card-content">
+                        <div class="service-icon">
+                            <img src="images/viki.png" alt="Viki" class="service-img">
+                        </div>
+                        <h3 class="service-name">Viki</h3>
+                        <p class="service-desc">El mejor entretenimiento asiático: Dramas y K-Pop.</p>
+                        <div class="pricing-options">
+                            <div class="price-option best-value" data-period="12">
+                                <span class="best-tag">Oferta</span>
+                                <span class="period">1 Año</span>
+                                <span class="price">$43.200 COP</span>
+                            </div>
+                        </div>
+                        <button class="btn btn-primary btn-block" onclick="openModal('Viki')">
+                            Comprar Ahora
+                        </button>
+                    </div>
+                </div>
+
+                <!-- Crunchyroll -->
+                <div class="service-card" data-service="crunchyroll">
+                    <div class="card-glow"></div>
+                    <div class="card-content">
+                        <div class="service-icon">
+                            <img src="images/crunchyroll.png" alt="Crunchyroll" class="service-img">
+                        </div>
+                        <h3 class="service-name">Crunchyroll</h3>
+                        <p class="service-desc">La mayor colección de anime del mundo.</p>
+                        <div class="pricing-options">
+                            <div class="price-option best-value" data-period="12">
+                                <span class="best-tag">Oferta</span>
+                                <span class="period">1 Año</span>
+                                <span class="price">$43.200 COP</span>
+                            </div>
+                        </div>
+                        <button class="btn btn-primary btn-block" onclick="openModal('Crunchyroll')">
+                            Comprar Ahora
+                        </button>
+                    </div>
+                </div>
+
+                <!-- Mubi -->
+                <div class="service-card" data-service="mubi">
+                    <div class="card-glow"></div>
+                    <div class="card-content">
+                        <div class="service-icon">
+                            <img src="images/mubi.png" alt="Mubi" class="service-img">
+                        </div>
+                        <h3 class="service-name">Mubi</h3>
+                        <p class="service-desc">Cine de culto, clásico e independiente.</p>
+                        <div class="pricing-options">
+                            <div class="price-option best-value" data-period="2">
+                                <span class="best-tag">Oferta</span>
+                                <span class="period">2 Meses</span>
+                                <span class="price">$21.600 COP</span>
+                            </div>
+                        </div>
+                        <button class="btn btn-primary btn-block" onclick="openModal('Mubi')">
+                            Comprar Ahora
+                        </button>
+                    </div>
+                </div>
+
+                <!-- Universal+ -->
+                <div class="service-card" data-service="universal">
+                    <div class="card-glow"></div>
+                    <div class="card-content">
+                        <div class="service-icon">
+                            <img src="images/universal.png" alt="Universal+" class="service-img">
+                        </div>
+                        <h3 class="service-name">Universal+</h3>
+                        <p class="service-desc">Tus series y películas favoritas de Universal.</p>
+                        <div class="pricing-options">
+                            <div class="price-option best-value" data-period="1">
+                                <span class="best-tag">Oferta</span>
+                                <span class="period">1 Mes</span>
+                                <span class="price">$10.800 COP</span>
+                            </div>
+                        </div>
+                        <button class="btn btn-primary btn-block" onclick="openModal('Universal+')">
+                            Comprar Ahora
+                        </button>
+                    </div>
+                </div>
+
+                <!-- Vix -->
+                <div class="service-card" data-service="vix">
+                    <div class="card-glow"></div>
+                    <div class="card-content">
+                        <div class="service-icon">
+                            <img src="images/vix.png" alt="Vix" class="service-img">
+                        </div>
+                        <h3 class="service-name">Vix Premium</h3>
+                        <p class="service-desc">Las mejores telenovelas y series en español.</p>
+                        <div class="pricing-options">
+                            <div class="price-option best-value" data-period="1">
+                                <span class="best-tag">Oferta</span>
+                                <span class="period">1 Mes</span>
+                                <span class="price">$10.800 COP</span>
+                            </div>
+                        </div>
+                        <button class="btn btn-primary btn-block" onclick="openModal('Vix')">
+                            Comprar Ahora
+                        </button>
+                    </div>
+                </div>
+
+                <!-- Tidal -->
+                <div class="service-card" data-service="tidal">
+                    <div class="card-glow"></div>
+                    <div class="card-content">
+                        <div class="service-icon">
+                            <img src="images/tidal.png" alt="Tidal" class="service-img">
+                        </div>
+                        <h3 class="service-name">Tidal</h3>
+                        <p class="service-desc">Música en alta fidelidad y contenido exclusivo.</p>
+                        <div class="pricing-options">
+                            <div class="price-option best-value" data-period="1">
+                                <span class="best-tag">Oferta</span>
+                                <span class="period">1 Mes</span>
+                                <span class="price">$10.800 COP</span>
+                            </div>
+                        </div>
+                        <button class="btn btn-primary btn-block" onclick="openModal('Tidal')">
+                            Comprar Ahora
+                        </button>
+                    </div>
+                </div>
+
+                <!-- Deezer -->
+                <div class="service-card" data-service="deezer">
+                    <div class="card-glow"></div>
+                    <div class="card-content">
+                        <div class="service-icon">
+                            <img src="images/deezer.png" alt="Deezer" class="service-img">
+                        </div>
+                        <h3 class="service-name">Deezer</h3>
+                        <p class="service-desc">Tu música favorita, podcasts y radio.</p>
+                        <div class="pricing-options">
+                            <div class="price-option best-value" data-period="1">
+                                <span class="best-tag">Oferta</span>
+                                <span class="period">1 Mes</span>
+                                <span class="price">$10.800 COP</span>
+                            </div>
+                        </div>
+                        <button class="btn btn-primary btn-block" onclick="openModal('Deezer')">
                             Comprar Ahora
                         </button>
                     </div>
@@ -499,11 +659,16 @@
                 </div>
                 <div class="contact-cta">
                     <div class="cta-card">
-                        <h3>¡Oferta Especial!</h3>
-                        <p>Compra 2 servicios y obtén <strong>15% de descuento</strong></p>
-                        <a href="https://wa.me/573053976431?text=Hola!%20Quiero%20aprovechar%20la%20oferta%20de%2015%25%20de%20descuento"
+                        <img src="images/super_promo.png" alt="Super Streaming Promo" class="promo-banner"
+                            style="width: 100%; border-radius: 12px; margin-bottom: 20px;">
+                        <h3>¡Super Streaming Promo!</h3>
+                        <p>Lleva <strong>HBO + Paramount + Viki + Crunchyroll</strong> (Cuentas Anuales)</p>
+                        <p class="price-promo"
+                            style="font-size: 2rem; font-weight: 800; color: var(--dark); margin: 10px 0;">$81.000 COP
+                        </p>
+                        <a href="https://wa.me/573053976431?text=Hola!%20Quiero%20la%20Super%20Streaming%20Promo%20de%204%20Apps"
                             class="btn btn-primary btn-lg" target="_blank">
-                            Aprovechar Oferta
+                            ¡Lo Quiero!
                         </a>
                     </div>
                 </div>
