--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
             <ul class="nav-menu" id="navMenu">
                 <li><a href="#inicio" class="nav-link">Inicio</a></li>
                 <li><a href="#servicios" class="nav-link">Servicios</a></li>
+                <li><a href="#software" class="nav-link">Software</a></li>
                 <li><a href="#beneficios" class="nav-link">Beneficios</a></li>
                 <li><a href="#testimonios" class="nav-link">Testimonios</a></li>
                 <li><a href="#faq" class="nav-link">FAQ</a></li>
@@ -479,6 +480,162 @@
         </div>
     </section>
 
+    </section>
+
+    <!-- Software & Herramientas Section -->
+    <section class="services section" id="software">
+        <div class="container">
+            <h2 class="section-title">Software y Herramientas</h2>
+            <div class="services-grid">
+                <!-- Microsoft Office -->
+                <div class="service-card" data-service="office">
+                    <div class="card-glow"></div>
+                    <div class="card-content">
+                        <div class="service-icon">
+                            <img src="images/office.png" alt="Microsoft Office" class="service-img">
+                        </div>
+                        <h3 class="service-name">Microsoft Office & 365</h3>
+                        <p class="service-desc">La suite de productividad líder en el mundo.</p>
+                        <ul class="service-features">
+                            <li>Word, Excel, PowerPoint</li>
+                            <li>Licencias de por vida o Anuales</li>
+                            <li>Cuentas Personales y Familiares</li>
+                        </ul>
+                        <div class="pricing-options">
+                            <div class="price-option best-value" data-period="forever">
+                                <span class="best-tag">Recomendado</span>
+                                <span class="period">Pro Plus 2021 (1 PC)</span>
+                                <span class="price">$162.500 COP</span>
+                            </div>
+                        </div>
+                        <button class="btn btn-primary btn-block" onclick="openModal('office')">Ver Opciones</button>
+                    </div>
+                </div>
+
+                <!-- Autodesk -->
+                <div class="service-card" data-service="autodesk">
+                    <div class="card-glow"></div>
+                    <div class="card-content">
+                        <div class="service-icon">
+                            <img src="images/autodesk.png" alt="Autodesk" class="service-img">
+                        </div>
+                        <h3 class="service-name">Autodesk Suite</h3>
+                        <p class="service-desc">Herramientas profesionales de diseño 3D e ingeniería.</p>
+                        <ul class="service-features">
+                            <li>AutoCAD, Revit, Civil 3D</li>
+                            <li>Licencias Anuales</li>
+                            <li>Soporte completo</li>
+                        </ul>
+                        <div class="pricing-options">
+                            <div class="price-option best-value" data-period="12">
+                                <span class="period">Anual</span>
+                                <span class="price">$75.000 COP</span>
+                            </div>
+                        </div>
+                        <button class="btn btn-primary btn-block" onclick="openModal('autodesk')">Más Info</button>
+                    </div>
+                </div>
+
+                <!-- Adobe CC -->
+                <div class="service-card" data-service="adobe">
+                    <div class="card-glow"></div>
+                    <div class="card-content">
+                        <div class="service-icon">
+                            <img src="images/adobe.png" alt="Adobe Creative Cloud" class="service-img">
+                        </div>
+                        <h3 class="service-name">Adobe Creative Cloud</h3>
+                        <p class="service-desc">Toda la colección de apps creativas de Adobe.</p>
+                        <ul class="service-features">
+                            <li>Photoshop, Illustrator, Premiere</li>
+                            <li>Incluye Adobe Stock</li>
+                            <li>Licencia de 1 Año</li>
+                        </ul>
+                        <div class="pricing-options">
+                            <div class="price-option best-value" data-period="12">
+                                <span class="period">1 Año + Stock</span>
+                                <span class="price">$437.500 COP</span>
+                            </div>
+                        </div>
+                        <button class="btn btn-primary btn-block" onclick="openModal('adobe')">Comprar Ahora</button>
+                    </div>
+                </div>
+
+                <!-- Kaspersky -->
+                <div class="service-card" data-service="kaspersky">
+                    <div class="card-glow"></div>
+                    <div class="card-content">
+                        <div class="service-icon">
+                            <img src="images/kaspersky.png" alt="Kaspersky Antivirus" class="service-img">
+                        </div>
+                        <h3 class="service-name">Kaspersky Antivirus</h3>
+                        <p class="service-desc">Máxima protección para tus dispositivos.</p>
+                        <ul class="service-features">
+                            <li>Protección en tiempo real</li>
+                            <li>Anti-Phishing y VPN</li>
+                            <li>Licencia Anual</li>
+                        </ul>
+                        <div class="pricing-options">
+                            <div class="price-option best-value" data-period="12">
+                                <span class="period">Standard (1 Año)</span>
+                                <span class="price">$87.500 COP</span>
+                            </div>
+                        </div>
+                        <button class="btn btn-primary btn-block" onclick="openModal('kaspersky')">Ver Planes</button>
+                    </div>
+                </div>
+
+                <!-- CapCut -->
+                <div class="service-card" data-service="capcut">
+                    <div class="card-glow"></div>
+                    <div class="card-content">
+                        <div class="service-icon">
+                            <img src="images/capcut.png" alt="CapCut Pro" class="service-img">
+                        </div>
+                        <h3 class="service-name">CapCut Pro</h3>
+                        <p class="service-desc">Editor de video todo en uno con funciones premium.</p>
+                        <ul class="service-features">
+                            <li>Efectos y filtros Pro</li>
+                            <li>Sin marca de agua</li>
+                            <li>Almacenamiento en la nube</li>
+                        </ul>
+                        <div class="pricing-options">
+                            <div class="price-option best-value" data-period="12">
+                                <span class="period">1 Año (1 Disp)</span>
+                                <span class="price">$87.500 COP</span>
+                            </div>
+                        </div>
+                        <button class="btn btn-primary btn-block" onclick="openModal('capcut')">Comprar Ahora</button>
+                    </div>
+                </div>
+
+                <!-- VPNs -->
+                <div class="service-card" data-service="nordvpn">
+                    <div class="card-glow"></div>
+                    <div class="card-content">
+                        <div class="service-icon">
+                            <img src="images/nordvpn.png" alt="NordVPN" class="service-img">
+                        </div>
+                        <h3 class="service-name">NordVPN</h3>
+                        <p class="service-desc">Navegación segura, privada y sin fronteras.</p>
+                        <ul class="service-features">
+                            <li>Privacidad absoluta</li>
+                            <li>5000+ Servidores</li>
+                            <li>Protección contra amenazas</li>
+                        </ul>
+                        <div class="pricing-options">
+                            <div class="price-option best-value" data-period="12">
+                                <span class="period">1 Año</span>
+                                <span class="price">$372.500 COP</span>
+                            </div>
+                        </div>
+                        <button class="btn btn-primary btn-block" onclick="openModal('nordvpn')">Más Info</button>
+                    </div>
+                </div>
+
+            </div>
+        </div>
+    </section>
+
     <!-- Beneficios -->
     <section class="benefits" id="beneficios">
         <div class="container">
@@ -628,6 +785,162 @@
                             simultáneos depende del plan de cada plataforma.</p>
                     </div>
                 </div>
+            </div>
+        </div>
+    </section>
+
+    </section>
+
+    <!-- Software & Herramientas Section -->
+    <section class="services section" id="software">
+        <div class="container">
+            <h2 class="section-title">Software y Herramientas</h2>
+            <div class="services-grid">
+                <!-- Microsoft Office -->
+                <div class="service-card" data-service="office">
+                    <div class="card-glow"></div>
+                    <div class="card-content">
+                        <div class="service-icon">
+                            <img src="images/office.png" alt="Microsoft Office" class="service-img">
+                        </div>
+                        <h3 class="service-name">Microsoft Office & 365</h3>
+                        <p class="service-desc">La suite de productividad líder en el mundo.</p>
+                        <ul class="service-features">
+                            <li>Word, Excel, PowerPoint</li>
+                            <li>Licencias de por vida o Anuales</li>
+                            <li>Cuentas Personales y Familiares</li>
+                        </ul>
+                        <div class="pricing-options">
+                            <div class="price-option best-value" data-period="forever">
+                                <span class="best-tag">Recomendado</span>
+                                <span class="period">Pro Plus 2021 (1 PC)</span>
+                                <span class="price">$162.500 COP</span>
+                            </div>
+                        </div>
+                        <button class="btn btn-primary btn-block" onclick="openModal('office')">Ver Opciones</button>
+                    </div>
+                </div>
+
+                <!-- Autodesk -->
+                <div class="service-card" data-service="autodesk">
+                    <div class="card-glow"></div>
+                    <div class="card-content">
+                        <div class="service-icon">
+                            <img src="images/autodesk.png" alt="Autodesk" class="service-img">
+                        </div>
+                        <h3 class="service-name">Autodesk Suite</h3>
+                        <p class="service-desc">Herramientas profesionales de diseño 3D e ingeniería.</p>
+                        <ul class="service-features">
+                            <li>AutoCAD, Revit, Civil 3D</li>
+                            <li>Licencias Anuales</li>
+                            <li>Soporte completo</li>
+                        </ul>
+                        <div class="pricing-options">
+                            <div class="price-option best-value" data-period="12">
+                                <span class="period">Anual</span>
+                                <span class="price">$75.000 COP</span>
+                            </div>
+                        </div>
+                        <button class="btn btn-primary btn-block" onclick="openModal('autodesk')">Más Info</button>
+                    </div>
+                </div>
+
+                <!-- Adobe CC -->
+                <div class="service-card" data-service="adobe">
+                    <div class="card-glow"></div>
+                    <div class="card-content">
+                        <div class="service-icon">
+                            <img src="images/adobe.png" alt="Adobe Creative Cloud" class="service-img">
+                        </div>
+                        <h3 class="service-name">Adobe Creative Cloud</h3>
+                        <p class="service-desc">Toda la colección de apps creativas de Adobe.</p>
+                        <ul class="service-features">
+                            <li>Photoshop, Illustrator, Premiere</li>
+                            <li>Incluye Adobe Stock</li>
+                            <li>Licencia de 1 Año</li>
+                        </ul>
+                        <div class="pricing-options">
+                            <div class="price-option best-value" data-period="12">
+                                <span class="period">1 Año + Stock</span>
+                                <span class="price">$437.500 COP</span>
+                            </div>
+                        </div>
+                        <button class="btn btn-primary btn-block" onclick="openModal('adobe')">Comprar Ahora</button>
+                    </div>
+                </div>
+
+                <!-- Kaspersky -->
+                <div class="service-card" data-service="kaspersky">
+                    <div class="card-glow"></div>
+                    <div class="card-content">
+                        <div class="service-icon">
+                            <img src="images/kaspersky.png" alt="Kaspersky Antivirus" class="service-img">
+                        </div>
+                        <h3 class="service-name">Kaspersky Antivirus</h3>
+                        <p class="service-desc">Máxima protección para tus dispositivos.</p>
+                        <ul class="service-features">
+                            <li>Protección en tiempo real</li>
+                            <li>Anti-Phishing y VPN</li>
+                            <li>Licencia Anual</li>
+                        </ul>
+                        <div class="pricing-options">
+                            <div class="price-option best-value" data-period="12">
+                                <span class="period">Standard (1 Año)</span>
+                                <span class="price">$87.500 COP</span>
+                            </div>
+                        </div>
+                        <button class="btn btn-primary btn-block" onclick="openModal('kaspersky')">Ver Planes</button>
+                    </div>
+                </div>
+
+                <!-- CapCut -->
+                <div class="service-card" data-service="capcut">
+                    <div class="card-glow"></div>
+                    <div class="card-content">
+                        <div class="service-icon">
+                            <img src="images/capcut.png" alt="CapCut Pro" class="service-img">
+                        </div>
+                        <h3 class="service-name">CapCut Pro</h3>
+                        <p class="service-desc">Editor de video todo en uno con funciones premium.</p>
+                        <ul class="service-features">
+                            <li>Efectos y filtros Pro</li>
+                            <li>Sin marca de agua</li>
+                            <li>Almacenamiento en la nube</li>
+                        </ul>
+                        <div class="pricing-options">
+                            <div class="price-option best-value" data-period="12">
+                                <span class="period">1 Año (1 Disp)</span>
+                                <span class="price">$87.500 COP</span>
+                            </div>
+                        </div>
+                        <button class="btn btn-primary btn-block" onclick="openModal('capcut')">Comprar Ahora</button>
+                    </div>
+                </div>
+
+                <!-- VPNs -->
+                <div class="service-card" data-service="nordvpn">
+                    <div class="card-glow"></div>
+                    <div class="card-content">
+                        <div class="service-icon">
+                            <img src="images/nordvpn.png" alt="NordVPN" class="service-img">
+                        </div>
+                        <h3 class="service-name">NordVPN</h3>
+                        <p class="service-desc">Navegación segura, privada y sin fronteras.</p>
+                        <ul class="service-features">
+                            <li>Privacidad absoluta</li>
+                            <li>5000+ Servidores</li>
+                            <li>Protección contra amenazas</li>
+                        </ul>
+                        <div class="pricing-options">
+                            <div class="price-option best-value" data-period="12">
+                                <span class="period">1 Año</span>
+                                <span class="price">$372.500 COP</span>
+                            </div>
+                        </div>
+                        <button class="btn btn-primary btn-block" onclick="openModal('nordvpn')">Más Info</button>
+                    </div>
+                </div>
+
             </div>
         </div>
     </section>
